# brainimaging-workflow

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  production.Dockerfile  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/notebooks/: test.ipynb
src/utils/: pipe.md  pipeline.py  preprocessing.py
